@@ -1,5 +1,8 @@
 2001-08-20  Pavel Roskin  <proski@gnu.org>
 
+	* gnome-undelfs.m4 (GNOME_UNDELFS_CHECKS): Specify additional
+	includes when testing for ext2fs/ext2fs.h.
+
 	* gnome-vfs.m4 (GNOME_WITH_VFS): Specify additional includes
 	when testing for rpc/pmap_clnt.h.  Needed for Autoconf 2.50+
 	only - older versions don't try to compile headers and ignore
